# prettyprinter-etna

./: .gitignore  BUGS.md  README.etna.md  TASKS.md  cabal.project  etna.toml
.github/workflows/: mhs-ci.yml
etna/: etna-runner.cabal
etna/app/: Main.hs
etna/src/Etna/: Properties.hs  Witnesses.hs
etna/src/Etna/Gens/: Falsify.hs  Hedgehog.hs  QuickCheck.hs  SmallCheck.hs
etna/test/: Witnesses.hs
misc/: version-compatibility-macros.h
patches/: alter_annotations_unbalanced_a3fc77b1_1.patch  fuse_annotated_drops_content_b2c0a91e_1.patch  ribbon_width_round_d4cd9e1f_1.patch  rtw_indent_carries_to_blank_e7d52f8a_1.patch
prettyprinter/: CHANGELOG.md  prettyprinter.cabal
prettyprinter-ansi-terminal/: CHANGELOG.md  prettyprinter-ansi-terminal.cabal
prettyprinter-ansi-terminal/src/Prettyprinter/Render/Terminal/: Internal.hs
prettyprinter-compat-annotated-wl-pprint/: prettyprinter-compat-annotated-wl-pprint.cabal
prettyprinter-compat-annotated-wl-pprint/src/Text/PrettyPrint/Annotated/: Leijen.hs
prettyprinter-compat-ansi-wl-pprint/: CHANGELOG.md  prettyprinter-compat-ansi-wl-pprint.cabal
prettyprinter-compat-wl-pprint/: prettyprinter-compat-wl-pprint.cabal
prettyprinter-compat-wl-pprint/src/Text/PrettyPrint/: Leijen.hs
prettyprinter-convert-ansi-wl-pprint/: prettyprinter-convert-ansi-wl-pprint.cabal
prettyprinter/bench/: Fusion.hs
prettyprinter/src/Prettyprinter/: Internal.hs
prettyprinter/src/Prettyprinter/Render/: Text.hs
prettyprinter/test/Testsuite/: Main.hs  StripTrailingSpace.hs
(+4 files in other folders)
